Initial attempt at doing a redux. Nothing concrete

--- a/cdap-ui/app/features/experimental/templates/directives-playground.html
+++ b/cdap-ui/app/features/experimental/templates/directives-playground.html
@@ -15,6 +15,18 @@
 -->
 
 <br/>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <div class="panel-title">
+      Generic-DAG (Redux'ed)
+    </div>
+  </div>
+  <div class="panel-body">
+    <my-dag1></my-dag1>
+  </div>
+</div>
+
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="panel-title">
