Adds the ability to add nodes & connect them. Basic functionality in.
Removed all hydrator specific stuff. The user can now configure,
- icon
- name,
- cssClass to apply to the node element,
- endpoints - left or right or both

The endpoints is kind of weird as of now. Need to find a better name.

But both store and controller are in sync now and I am able to draw a diagram and construct a JSON out of it.

--- a/cdap-ui/app/features/experimental/templates/directives-playground.html
+++ b/cdap-ui/app/features/experimental/templates/directives-playground.html
@@ -23,14 +23,20 @@
     </div>
   </div>
   <div class="panel-body">
-    <div class="col-xs-4 form-inline">
+    <div class="col-xs-12 form-inline">
       <div class="form-group">
-        <input type="text" ng-model="Dag1TestCtrl.nodename" class="form-control"/>
+        <input type="text" ng-model="Dag1TestCtrl.nodename" placeholder="Node name" class="form-control"/>
+        <input type="text" ng-model="Dag1TestCtrl.endpoints" placeholder="# of Endpoints" class="form-control"/>
+        <input type="text" ng-model="Dag1TestCtrl.cssClass" placeholder="css class to apply" class="form-control"/>
+        <input type="text" ng-model="Dag1TestCtrl.icon" placeholder="Node icon" class="form-control"/>
         <div class="btn btn-default" ng-click="Dag1TestCtrl.addNode()">Add</div>
       </div>
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-12">
       <my-dag1></my-dag1>
+    </div>
+    <div class="col-xs-12">
+      <textarea class="form-control" cask-json-edit="Dag1TestCtrl.state" rows="5" cols="50"></textarea>
     </div>
   </div>
 </div>
