Removes references of hydrator in factory settings for nodes

--- a/cdap-ui/app/directives/dag-1/my-dag-1.less
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.less
@@ -167,14 +167,10 @@ my-dag1 {
         r: 2px;
         stroke-width: 8px;
       }
-      &-anchor-leftAnchor circle {
-        stroke: #48c038;
-      }
-      &-anchor-leftRightAnchor circle {
-        stroke: #4586f3;
-      }
+      &-anchor-leftAnchor circle,
+      &-anchor-leftRightAnchor circle,
       &-anchor-rightAnchor circle {
-        stroke: #8367df;
+        stroke: @cdap-bluegray;
       }
     }
 
