Adds the ability to customize as much as we can on a node

--- a/cdap-ui/app/directives/dag-1/my-dag-1.less
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.less
@@ -119,7 +119,7 @@ my-dag1 {
         .border-radius(50%);
       }
 
-      .error-node-notification {
+      .badge-notification {
         color: white;
         position: absolute;
         top: -8px;
