--- a/cdap-ui/app/features/experimental/experimental.less
+++ b/cdap-ui/app/features/experimental/experimental.less
@@ -4,4 +4,52 @@ my-dag1 {
 }
 .my-js-dag {
   overflow: auto;
+
+  .box {
+    &.generic {
+      &.realtimesource, &.batchsource {
+        color: #48c038;
+        // left: 10vw;
+        .node {
+          border: 3px solid #48c038;
+        }
+      }
+      &.transform {
+        color: #4586f3;
+        left: 30vw;
+        .node {
+          border: 3px solid #4586f3;
+        }
+      }
+      &.selected {
+        &.realtimesource, &.batchsource {
+          .node {
+            background-color: #48c038;
+            border-width: 6px;
+          }
+        }
+        &.transform {
+          .node {
+            background-color: #4586f3;
+            border-width: 6px;
+          }
+        }
+        &.realtimesink, &.batchsink {
+          .node {
+            background-color: #8367df;
+            border-width: 6px;
+          }
+        }
+        .icon.fa, .fa.fa-close {
+          color: white;
+        }
+        .icon.fa {
+          line-height: 34px;
+        }
+        .fa.fa-close {
+          top: 3px;
+        }
+      }
+    }
+  }
 }
