--- a/cdap-ui/app/features/experimental/experimental.less
+++ b/cdap-ui/app/features/experimental/experimental.less
@@ -57,6 +57,22 @@ my-dag1 {
           }
         }
       }
+      .node {
+        .badge-warning {
+          .badge-notification {
+            .badge {
+              background: #f4b400;
+            }
+          }
+        }
+        .badge-danger {
+          .badge-notification {
+            .badge {
+              background: red;
+            }
+          }
+        }
+      }
     }
 
     .jsplumb-endpoint {
