--- a/cdap-ui/app/features/experimental/templates/directives-playground.html
+++ b/cdap-ui/app/features/experimental/templates/directives-playground.html
@@ -25,16 +25,10 @@
   <div class="panel-body">
     <div class="my-dag1-wrapper">
       <div class="col-xs-12 form-inline">
-        <div class="form-group">
-          <input type="text" ng-model="Dag1TestCtrl.nodename" placeholder="Node name" class="form-control"/>
-          <input type="text" ng-model="Dag1TestCtrl.endpointType" placeholder="# of Endpoints" class="form-control"/>
-          <input type="text" ng-model="Dag1TestCtrl.cssClass" placeholder="css class to apply" class="form-control"/>
-          <input type="text" ng-model="Dag1TestCtrl.icon" placeholder="Node icon" class="form-control"/>
-          <input type="text" ng-model="Dag1TestCtrl.badgeInfo" placeholder="Badge Info" class="form-control"/>
-          <input type="text" ng-model="Dag1TestCtrl.badgeCssClass" placeholder="Badge css class" class="form-control"/>
-          <input type="text" ng-model="Dag1TestCtrl.badgeTooltip" placeholder="Tooltip for the badge" class="form-control"/>
-          <input type="text" ng-model="Dag1TestCtrl.tooltipCssClass" placeholder="Tooltip wrapper css class" class="form-control"/>
-          <div class="btn btn-default" ng-click="Dag1TestCtrl.addNode()">Add</div>
+        <div class="btn-group">
+          <div class="btn btn-default" ng-click="Dag1TestCtrl.addNode('source')">Add Source</div>
+          <div class="btn btn-default" ng-click="Dag1TestCtrl.addNode('sink')">Add Sink</div>
+          <div class="btn btn-default" ng-click="Dag1TestCtrl.addNode('transform')">Add Transform</div>
         </div>
       </div>
       <div class="col-xs-12">
