Adds fitToScreen & cleanupGraph functionalities for mydag1 directive

--- a/cdap-ui/app/directives/dag-1/my-dag-1.less
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.less
@@ -83,7 +83,7 @@ my-dag1 {
         width: 56px;
         .border-radius(6px);
         .box-shadow(0 10px 18px -9px fade(black, 50%));
-        .transition(all 50ms linear);
+        // .transition(all 50ms linear);
         background-clip: border-box;
         &:hover, &:focus {
           .fa.fa-close {
@@ -148,7 +148,7 @@ my-dag1 {
         position: absolute;
         right: 28px;
         .opacity(0);
-        .transition(opacity 0.2s ease);
+        // .transition(opacity 0.2s ease);
       }
       .plugin-name {
         font-size: 13px;
