--- a/cdap-ui/app/features/experimental/templates/directives-playground.html
+++ b/cdap-ui/app/features/experimental/templates/directives-playground.html
@@ -32,6 +32,7 @@
         </div>
       </div>
       <div class="col-xs-12">
+        <pre> {{Dag1TestCtrl.selectedNode | json:4 }}</pre>
         <my-dag1></my-dag1>
       </div>
       <div class="col-xs-12">
