Cleansup experimental page

--- a/cdap-ui/app/features/experimental/experimental.less
+++ b/cdap-ui/app/features/experimental/experimental.less
@@ -98,6 +98,11 @@ my-dag1 {
 
 }
 
+.my-dag1-wrapper {
+  [class*="col-xs-12"] {
+    padding: 0
+  }
+}
 .panel .panel-body .my-dag1-wrapper {
   textarea {
     resize: vertical;
