--- a/cdap-ui/app/features/flows/templates/tabs/runs/tabs/status.html
+++ b/cdap-ui/app/features/flows/templates/tabs/runs/tabs/status.html
@@ -15,11 +15,12 @@
 -->
 
 <div ng-controller="FlowsRunDetailStatusController as StatusController">
-  <my-flow-graph data-model="StatusController.data"
+  <!-- <my-flow-graph data-model="StatusController.data"
                  data-on-change-flag="StatusController.onChangeFlag"
                  data-click="StatusController.flowletClick"
                  data-click-context="StatusController"
                  parent="#c{{$state.params.runid}}"
                  id="c{{$state.params.runid}}">
-  </my-flow-graph>
+  </my-flow-graph> -->
+  <my-dag1></my-dag1>
 </div>
