--- a/cdap-ui/app/features/hydratorplusplus/bottompanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/bottompanel.less
@@ -22,7 +22,8 @@ body.theme-cdap.state-hydratorplusplus {
   &.state-hydratorplusplus-detail {
     background-color: @table-bg;
 
-    my-dag-plus .my-js-dag {
+    // my-dag-plus .my-js-dag {
+    my-dag1 .my-js-dag {
       border-bottom: 0;
     }
 
