--- a/cdap-ui/app/features/hydratorplusplus/templates/create/canvas.html
+++ b/cdap-ui/app/features/hydratorplusplus/templates/create/canvas.html
@@ -14,11 +14,12 @@
   the License.
 -->
 
-<my-dag-plus ng-class="{'canvas-scroll': CanvasCtrl.state.setScroll}"
+<!-- <my-dag-plus ng-class="{'canvas-scroll': CanvasCtrl.state.setScroll}"
   nodes="CanvasCtrl.nodes"
   connections="CanvasCtrl.connections"
   context="CanvasCtrl"
   node-delete="CanvasCtrl.deleteNode",
   template-popover="/assets/features/hydrator/templates/partial/schema-popover.html"
   connection-popover-data="CanvasCtrl.generateSchemaOnEdge"
-></my-dag-plus>
+></my-dag-plus> -->
+<my-dag1></my-dag1>
