Minimal integration of my-dag1 directive to hydrator++

--- a/cdap-ui/app/features/hydratorplusplus/templates/create/canvas.html
+++ b/cdap-ui/app/features/hydratorplusplus/templates/create/canvas.html
@@ -22,4 +22,4 @@
   template-popover="/assets/features/hydrator/templates/partial/schema-popover.html"
   connection-popover-data="CanvasCtrl.generateSchemaOnEdge"
 ></my-dag-plus> -->
-<my-dag1></my-dag1>
+<my-dag1 ng-class="{'canvas-scroll': CanvasCtrl.state.setScroll}"></my-dag1>
