--- a/cdap-ui/app/features/hydratorplusplus/adapters.less
+++ b/cdap-ui/app/features/hydratorplusplus/adapters.less
@@ -48,7 +48,7 @@ body.theme-cdap {
     }
 
     // my-dag-plus {
-    my-dag1 {
+    my-dag1, my-dag-plus {
       width: 100%;
       // Dag-Height 60% on smaller screen
       height: 60vh;
